--- a/iOS_Rasid/Modules/AddBranch/Scenes/Branchs/View/FilterCell/FilterCell.xib
+++ b/iOS_Rasid/Modules/AddBranch/Scenes/Branchs/View/FilterCell/FilterCell.xib
@@ -15,17 +15,17 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="FilterCell" id="gTV-IL-0wX" customClass="FilterCell" customModule="iOS_Rasid" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="54" height="32"/>
+            <rect key="frame" x="0.0" y="0.0" width="73" height="32"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="54" height="32"/>
+                <rect key="frame" x="0.0" y="0.0" width="73" height="32"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nok-Id-7gN">
-                        <rect key="frame" x="0.0" y="0.0" width="54" height="32"/>
+                        <rect key="frame" x="0.0" y="0.0" width="73" height="32"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fQW-GW-4UI">
-                                <rect key="frame" x="10" y="0.0" width="34" height="32"/>
+                                <rect key="frame" x="10" y="0.0" width="53" height="32"/>
                                 <fontDescription key="fontDescription" name="Cairo-Regular" family="Cairo" pointSize="14"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -33,6 +33,7 @@
                         </subviews>
                         <color key="backgroundColor" red="0.95294117647058818" green="0.95294117647058818" blue="0.95294117647058818" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
+                            <constraint firstAttribute="trailing" secondItem="fQW-GW-4UI" secondAttribute="trailing" constant="10" id="KwS-HT-6bf"/>
                             <constraint firstItem="fQW-GW-4UI" firstAttribute="top" secondItem="nok-Id-7gN" secondAttribute="top" id="dKz-Cv-74U"/>
                             <constraint firstAttribute="bottom" secondItem="fQW-GW-4UI" secondAttribute="bottom" id="wQ7-ZQ-8no"/>
                         </constraints>
@@ -46,14 +47,13 @@
                 <constraint firstItem="fQW-GW-4UI" firstAttribute="leading" secondItem="nok-Id-7gN" secondAttribute="leading" constant="10" id="JXG-Wj-2zK"/>
                 <constraint firstAttribute="trailing" secondItem="nok-Id-7gN" secondAttribute="trailing" id="MAS-Ai-PhJ"/>
                 <constraint firstAttribute="bottom" secondItem="nok-Id-7gN" secondAttribute="bottom" id="n1M-YM-Xue"/>
-                <constraint firstItem="nok-Id-7gN" firstAttribute="trailing" secondItem="fQW-GW-4UI" secondAttribute="trailing" constant="10" id="y8N-Pb-PXN"/>
             </constraints>
-            <size key="customSize" width="75" height="39"/>
+            <size key="customSize" width="94" height="39"/>
             <connections>
                 <outlet property="backView" destination="nok-Id-7gN" id="IZz-xA-JKV"/>
                 <outlet property="filterLabel" destination="fQW-GW-4UI" id="azS-Sb-g7W"/>
             </connections>
-            <point key="canvasLocation" x="-58.46153846153846" y="12.085308056872037"/>
+            <point key="canvasLocation" x="-43.846153846153847" y="12.085308056872037"/>
         </collectionViewCell>
     </objects>
 </document>
