--- a/iOS_Rasid/Modules/AddBranch/Scenes/Branchs/View/BranchsTableView/BranchCell/BranchCell.xib
+++ b/iOS_Rasid/Modules/AddBranch/Scenes/Branchs/View/BranchsTableView/BranchCell/BranchCell.xib
@@ -7,45 +7,50 @@
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="Cairo-Regular.ttf">
+            <string>Cairo-Regular</string>
+        </array>
+    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="BranchCell" rowHeight="133" id="KGk-i7-Jjw" customClass="BranchCell" customModule="iOS_Rasid" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="301" height="133"/>
+            <rect key="frame" x="0.0" y="0.0" width="358" height="133"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="301" height="133"/>
+                <rect key="frame" x="0.0" y="0.0" width="358" height="133"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8Nz-PN-0HD">
-                        <rect key="frame" x="5" y="10" width="270.66666666666669" height="113"/>
+                        <rect key="frame" x="17" y="10" width="336" height="113"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="TnR-ou-smc">
-                                <rect key="frame" x="31.999999999999986" y="0.0" width="222.66666666666663" height="113"/>
+                                <rect key="frame" x="32" y="0.0" width="288" height="113"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="Ayy-Nk-vEf">
-                                        <rect key="frame" x="-16" y="32.666666666666671" width="114.33333333333333" height="47.666666666666671"/>
+                                        <rect key="frame" x="-16" y="26.666666666666668" width="154" height="59.666666666666657"/>
                                         <subviews>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="locationCell_ic" translatesAutoresizingMaskIntoConstraints="NO" id="Zod-ah-WrO">
-                                                <rect key="frame" x="0.0" y="10" width="22" height="28"/>
+                                                <rect key="frame" x="0.0" y="16" width="22" height="28"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="28" id="Zx6-TR-1QU"/>
                                                     <constraint firstAttribute="width" constant="22" id="xMS-Hm-Nw3"/>
                                                 </constraints>
                                             </imageView>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="7" translatesAutoresizingMaskIntoConstraints="NO" id="RYK-MH-q5M">
-                                                <rect key="frame" x="31.999999999999993" y="0.0" width="82.333333333333314" height="47.666666666666664"/>
+                                                <rect key="frame" x="32" y="0.0" width="122" height="59.666666666666664"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="54a-g3-n5p" userLabel="branchNameLabel">
-                                                        <rect key="frame" x="0.0" y="0.0" width="41.333333333333336" height="20.333333333333332"/>
-                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="36" height="30"/>
+                                                        <fontDescription key="fontDescription" name="Cairo-Regular" family="Cairo" pointSize="16"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="dasasdasd" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hAt-yw-YT9" userLabel="mangerNameLabel">
-                                                        <rect key="frame" x="0.0" y="27.333333333333336" width="82.333333333333329" height="20.333333333333336"/>
-                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                        <nil key="textColor"/>
+                                                        <rect key="frame" x="0.0" y="37.000000000000007" width="54" height="22.666666666666664"/>
+                                                        <fontDescription key="fontDescription" name="Cairo-Regular" family="Cairo" pointSize="12"/>
+                                                        <color key="textColor" red="0.67450980392156867" green="0.67450980392156867" blue="0.67450980392156867" alpha="1" colorSpace="calibratedRGB"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                 </subviews>
@@ -53,22 +58,25 @@
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="pkX-sC-Uip">
-                                        <rect key="frame" x="108.33333333333334" y="32.666666666666664" width="114.33333333333334" height="47.999999999999993"/>
+                                        <rect key="frame" x="148" y="32.666666666666664" width="154" height="47.999999999999993"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JSO-fj-Pfp" userLabel="sellerCountLabel">
-                                                <rect key="frame" x="0.0" y="13.66666666666667" width="52.333333333333336" height="20.333333333333329"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <rect key="frame" x="0.0" y="9" width="72" height="30"/>
+                                                <fontDescription key="fontDescription" name="Cairo-Regular" family="Cairo" pointSize="16"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vY8-RL-Add" userLabel="ShowDetailsBtn">
-                                                <rect key="frame" x="62.333333333333314" y="0.0" width="52" height="48"/>
+                                                <rect key="frame" x="82" y="0.0" width="72" height="48"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="48" id="Xfg-MI-iey"/>
                                                     <constraint firstAttribute="height" constant="48" id="rzR-Bg-uEK"/>
                                                 </constraints>
                                                 <state key="normal" title="Button"/>
-                                                <buttonConfiguration key="configuration" style="plain" title=""/>
+                                                <buttonConfiguration key="configuration" style="plain" image="showBranchDetailsButton_ic" title=""/>
+                                                <connections>
+                                                    <action selector="detailsButtonTapped:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="Ruz-4i-hFw"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                     </stackView>
@@ -78,6 +86,7 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="TnR-ou-smc" firstAttribute="top" secondItem="8Nz-PN-0HD" secondAttribute="top" id="Ack-Um-52X"/>
+                            <constraint firstItem="pkX-sC-Uip" firstAttribute="trailing" secondItem="8Nz-PN-0HD" secondAttribute="trailing" constant="-2" id="PNs-WE-80v"/>
                             <constraint firstAttribute="trailing" secondItem="TnR-ou-smc" secondAttribute="trailing" constant="16" id="Tju-T6-CzS"/>
                             <constraint firstItem="TnR-ou-smc" firstAttribute="leading" secondItem="8Nz-PN-0HD" secondAttribute="leading" constant="32" id="aWi-6c-4df"/>
                             <constraint firstItem="Ayy-Nk-vEf" firstAttribute="leading" secondItem="8Nz-PN-0HD" secondAttribute="leading" constant="16" id="gWA-C0-7pc"/>
@@ -86,9 +95,9 @@
                     </view>
                 </subviews>
                 <constraints>
+                    <constraint firstItem="8Nz-PN-0HD" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="-3" id="3DR-rS-Nbc"/>
                     <constraint firstAttribute="bottom" secondItem="8Nz-PN-0HD" secondAttribute="bottom" constant="10" id="6z7-KC-alE"/>
-                    <constraint firstAttribute="trailing" secondItem="8Nz-PN-0HD" secondAttribute="trailing" constant="5" id="9W8-Pw-X9q"/>
-                    <constraint firstItem="8Nz-PN-0HD" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="5" id="VUM-JW-HRf"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="8Nz-PN-0HD" secondAttribute="trailing" constant="-16" id="9Xj-rg-ZtJ"/>
                     <constraint firstItem="8Nz-PN-0HD" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="eao-lI-9my"/>
                 </constraints>
             </tableViewCellContentView>
@@ -97,13 +106,13 @@
                 <outlet property="branchNameLabel" destination="54a-g3-n5p" id="vmL-Lk-6kz"/>
                 <outlet property="managerNameLabel" destination="hAt-yw-YT9" id="fjv-0D-Bki"/>
                 <outlet property="sellersCountLabel" destination="JSO-fj-Pfp" id="fTw-it-ihG"/>
-                <outlet property="showBranchDetailsButton" destination="vY8-RL-Add" id="Ua1-Sh-zhB"/>
             </connections>
-            <point key="canvasLocation" x="3.8461538461538458" y="51.540284360189574"/>
+            <point key="canvasLocation" x="53.076923076923073" y="51.540284360189574"/>
         </tableViewCell>
     </objects>
     <resources>
         <image name="locationCell_ic" width="22" height="29"/>
+        <image name="showBranchDetailsButton_ic" width="48" height="48"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
