--- a/iOS_Rasid/Modules/AddBranch/Scenes/Branchs/View/ViewController/Base.lproj/BranchsViewController.xib
+++ b/iOS_Rasid/Modules/AddBranch/Scenes/Branchs/View/ViewController/Base.lproj/BranchsViewController.xib
@@ -15,13 +15,11 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="BranchsViewController" customModule="iOS_Rasid" customModuleProvider="target">
             <connections>
-                <outlet property="addBranchButton" destination="5Gg-By-WKz" id="q34-nP-dht"/>
                 <outlet property="branchsTabelViewHeaderLabel" destination="7st-v9-27N" id="XNo-MA-A8p"/>
                 <outlet property="branchsTableView" destination="gZf-f0-hIj" id="ziR-Nt-MHD"/>
                 <outlet property="filterCollectionView" destination="0ZR-Oz-79G" id="DD5-77-Wyq"/>
                 <outlet property="filtersHeightConstrain" destination="ENK-FS-yr6" id="EbX-UF-D0a"/>
                 <outlet property="reportButton" destination="OeY-CL-xhm" id="eYl-m5-Ggx"/>
-                <outlet property="stackView" destination="Gue-tZ-N4Z" id="hor-8w-bqN"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -30,28 +28,42 @@
             <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo_ic" translatesAutoresizingMaskIntoConstraints="NO" id="iGu-Wy-7IS">
-                    <rect key="frame" x="155" y="47" width="80" height="22"/>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo_ic" translatesAutoresizingMaskIntoConstraints="NO" id="iGu-Wy-7IS">
+                    <rect key="frame" x="155" y="55" width="80" height="22"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="80" id="h4L-j3-s9G"/>
+                        <constraint firstAttribute="width" constant="80" id="aXu-MB-rGC"/>
                         <constraint firstAttribute="height" constant="22" id="rRO-yZ-XsA"/>
                     </constraints>
                 </imageView>
-                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="profileBg_ic" translatesAutoresizingMaskIntoConstraints="NO" id="Z8U-yg-HOl">
-                    <rect key="frame" x="16" y="109" width="358" height="66"/>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fE4-VO-uMd">
+                    <rect key="frame" x="16" y="85" width="358" height="105"/>
+                    <subviews>
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="profileBg_ic" translatesAutoresizingMaskIntoConstraints="NO" id="Z8U-yg-HOl">
+                            <rect key="frame" x="0.0" y="39" width="358" height="66"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="66" id="WtE-dw-mYx"/>
+                            </constraints>
+                        </imageView>
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="profileLocation_ic" translatesAutoresizingMaskIntoConstraints="NO" id="V9x-Oh-4Ct">
+                            <rect key="frame" x="24" y="0.0" width="80" height="105"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="80" id="KZR-ab-9Kj"/>
+                            </constraints>
+                        </imageView>
+                    </subviews>
+                    <color key="backgroundColor" white="1" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="66" id="WtE-dw-mYx"/>
+                        <constraint firstItem="Z8U-yg-HOl" firstAttribute="bottom" secondItem="fE4-VO-uMd" secondAttribute="bottom" id="3be-69-dfm"/>
+                        <constraint firstItem="V9x-Oh-4Ct" firstAttribute="leading" secondItem="fE4-VO-uMd" secondAttribute="leading" constant="24" id="I36-6M-zMn"/>
+                        <constraint firstItem="V9x-Oh-4Ct" firstAttribute="top" secondItem="fE4-VO-uMd" secondAttribute="top" id="Rqf-zT-PdG"/>
+                        <constraint firstAttribute="height" constant="105" id="Smn-na-dKm"/>
+                        <constraint firstItem="V9x-Oh-4Ct" firstAttribute="height" secondItem="fE4-VO-uMd" secondAttribute="height" id="mMG-VL-ZWa"/>
+                        <constraint firstItem="Z8U-yg-HOl" firstAttribute="leading" secondItem="fE4-VO-uMd" secondAttribute="leading" id="qzh-Jk-jCZ"/>
+                        <constraint firstAttribute="trailing" secondItem="Z8U-yg-HOl" secondAttribute="trailing" id="x9p-4M-xjO"/>
                     </constraints>
-                </imageView>
-                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="profileLocation_ic" translatesAutoresizingMaskIntoConstraints="NO" id="V9x-Oh-4Ct">
-                    <rect key="frame" x="40" y="70" width="80" height="105"/>
-                    <constraints>
-                        <constraint firstAttribute="width" constant="80" id="KZR-ab-9Kj"/>
-                        <constraint firstAttribute="height" constant="105" id="nkD-YN-D9e"/>
-                    </constraints>
-                </imageView>
-                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="Gue-tZ-N4Z">
-                    <rect key="frame" x="16" y="177" width="358" height="451"/>
+                </view>
+                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="Gue-tZ-N4Z">
+                    <rect key="frame" x="16" y="198" width="358" height="432"/>
                     <subviews>
                         <collectionView hidden="YES" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="0ZR-Oz-79G">
                             <rect key="frame" x="0.0" y="-62" width="358" height="62"/>
@@ -67,16 +79,19 @@
                             </collectionViewFlowLayout>
                         </collectionView>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="سجل الفروع" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7st-v9-27N" userLabel="branchsTabelHeaderLabel">
-                            <rect key="frame" x="0.0" y="0.0" width="358" height="30"/>
+                            <rect key="frame" x="0.0" y="0.0" width="358" height="28.666666666666668"/>
                             <fontDescription key="fontDescription" name="Cairo-Regular" family="Cairo" pointSize="16"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="gZf-f0-hIj" userLabel="branchsTableView">
-                            <rect key="frame" x="0.0" y="42" width="358" height="409"/>
+                            <rect key="frame" x="0.0" y="34.666666666666657" width="358" height="397.33333333333337"/>
                             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         </tableView>
                     </subviews>
+                    <constraints>
+                        <constraint firstItem="gZf-f0-hIj" firstAttribute="height" secondItem="Gue-tZ-N4Z" secondAttribute="height" multiplier="0.919643" id="YKx-bu-n5W"/>
+                    </constraints>
                 </stackView>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5Gg-By-WKz" userLabel="addButton">
                     <rect key="frame" x="16" y="738" width="56" height="56"/>
@@ -85,7 +100,10 @@
                         <constraint firstAttribute="width" constant="56" id="ohT-2c-NL6"/>
                     </constraints>
                     <state key="normal" title="Button"/>
-                    <buttonConfiguration key="configuration" style="plain" title=""/>
+                    <buttonConfiguration key="configuration" style="plain" image="addBranchButton_ic" title=""/>
+                    <connections>
+                        <action selector="addBranchButtonTapped:" destination="-1" eventType="touchUpInside" id="ymD-qm-TrM"/>
+                    </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OeY-CL-xhm" userLabel="reportButton">
                     <rect key="frame" x="100" y="678" width="190" height="48"/>
@@ -99,31 +117,33 @@
                     <state key="normal" title="اصدار تقرير">
                         <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </state>
+                    <connections>
+                        <action selector="reportButtonTapped:" destination="-1" eventType="touchUpInside" id="rEK-4Y-1lA"/>
+                    </connections>
                 </button>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
-                <constraint firstItem="iGu-Wy-7IS" firstAttribute="centerX" secondItem="fnl-2z-Ty3" secondAttribute="centerX" id="0qE-zG-B0a"/>
                 <constraint firstItem="5Gg-By-WKz" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="9PT-sj-nhm"/>
-                <constraint firstItem="OeY-CL-xhm" firstAttribute="top" secondItem="Gue-tZ-N4Z" secondAttribute="bottom" constant="50" id="CbA-ry-3Q7"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="Z8U-yg-HOl" secondAttribute="trailing" constant="16" id="Dne-ON-aFQ"/>
+                <constraint firstItem="Gue-tZ-N4Z" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" constant="-16" id="GBP-SD-Gcg"/>
+                <constraint firstItem="fE4-VO-uMd" firstAttribute="top" secondItem="iGu-Wy-7IS" secondAttribute="bottom" constant="8" id="KpV-Xl-i2j"/>
+                <constraint firstItem="fE4-VO-uMd" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" constant="-16" id="Kwc-9g-p3L"/>
+                <constraint firstItem="iGu-Wy-7IS" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="8" id="LAx-OW-Hgl"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="5Gg-By-WKz" secondAttribute="bottom" constant="16" id="MSK-PS-fZ4"/>
-                <constraint firstItem="Gue-tZ-N4Z" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="NPk-Wr-wEz"/>
-                <constraint firstItem="iGu-Wy-7IS" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="cNI-qG-xhn"/>
+                <constraint firstItem="Gue-tZ-N4Z" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="SHA-ol-eGN"/>
                 <constraint firstItem="OeY-CL-xhm" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="cdj-sv-Na3"/>
-                <constraint firstItem="Gue-tZ-N4Z" firstAttribute="top" secondItem="Z8U-yg-HOl" secondAttribute="bottom" constant="2" id="fY1-yy-l7i"/>
-                <constraint firstItem="Z8U-yg-HOl" firstAttribute="leading" secondItem="V9x-Oh-4Ct" secondAttribute="leading" constant="-24" id="lLY-3l-Ekh"/>
-                <constraint firstItem="Z8U-yg-HOl" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="ms0-Wy-3hv"/>
-                <constraint firstItem="Gue-tZ-N4Z" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" constant="-16" id="og6-iZ-IV5"/>
+                <constraint firstItem="OeY-CL-xhm" firstAttribute="top" secondItem="Gue-tZ-N4Z" secondAttribute="bottom" constant="48" id="gJx-K7-L8c"/>
+                <constraint firstItem="iGu-Wy-7IS" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="jXc-v9-Q7O"/>
+                <constraint firstItem="fE4-VO-uMd" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="nHz-h3-oPj"/>
                 <constraint firstItem="5Gg-By-WKz" firstAttribute="top" secondItem="OeY-CL-xhm" secondAttribute="bottom" constant="12" id="upR-do-uCg"/>
-                <constraint firstItem="Z8U-yg-HOl" firstAttribute="top" secondItem="iGu-Wy-7IS" secondAttribute="bottom" constant="40" id="xqM-Qk-keQ"/>
-                <constraint firstItem="V9x-Oh-4Ct" firstAttribute="bottom" secondItem="Z8U-yg-HOl" secondAttribute="bottom" id="zYI-pj-K0m"/>
+                <constraint firstItem="Gue-tZ-N4Z" firstAttribute="top" secondItem="fE4-VO-uMd" secondAttribute="bottom" constant="8" id="vGs-3B-rr6"/>
             </constraints>
             <point key="canvasLocation" x="27.69230769230769" y="20.616113744075829"/>
         </view>
     </objects>
     <resources>
+        <image name="addBranchButton_ic" width="76" height="76"/>
         <image name="logo_ic" width="81" height="23"/>
         <image name="profileBg_ic" width="396" height="66"/>
         <image name="profileLocation_ic" width="79" height="105"/>
